2003-04-29  Milan Zamazal  <pdm@brailcom.org>

	* src/modules/apollo.c (apollo_pause): Call apollo_stop.

	* INSTALL: libfestival-dev and libestools-dev added.
	* configure.in: Call AC_PROG_CXX.
	* src/modules/est_string_config.h: New file.
	* src/modules/Makefile.am: Build the Festival module.
	(AM_CXXFLAGS): New variable.
	* src/modules/festival.cc: Renamed from festival.c.
	(festival_pause): New function.

2003-04-28  Milan Zamazal  <pdm@brailcom.org>

	* src/Makefile.am (SUBDIRS): Process `audio' before `modules'.

2003-04-28  Hynek Hanke  <hanke@localhost.localdomain>

	* src/server/speaking.h: New headers for speaking_pause_all(), speaking_resume_all().

	* src/server/speaking.c (speaking_pause_all): New function.
	(speaking_resume_all): New function.
	(speaking_pause): Reworked.
	(speaking_resume): Reworked.

	* src/server/speechd.h: Removed stop/cancel/pause/resume functions.
	
	* src/server/parse.c (pause): Reworked.
	(resume): Reworked.
	
	
	* src/modules/apollo.c (apollo_pause): New function. Needs some work:)

	* src/modules/flite.c (_flite_speak): Use the spd_audio.c library.
	(_flite_synth): New function. Splitted from _flite_speak.
	(flite_pause): New function. Stop speaking the message and return the rest.

	* src/audio/spd_audio.h: New header file for spd_audio.c.

	* src/audio/spd_audio.c: New file: Audio output for Speech Deamon.

	* configure.in: Build src/audio.	

	* Makefile.am: Build src/audio.

	* src/Makefile.am: Build src/audio.

2003-04-25  Milan Zamazal  <pdm@brailcom.org>

	* INSTALL: Dependency on librecode added.
	* src/modules/Makefile.am (libsdapollo_la_LDFLAGS): -lrecode
	added.
	* src/modules/apollo.c: Include recode.h and stdbool.h.
	(recode_outer, recode_request): New variables.
	(module_init): Initialize them.
	(set_language): Set recoding.
	(apollo_write): Recode data.
	(set_speed): Renamed to set_rate.
	(apollo_write): Change above considered.
	(UPDATE_STRING_PARAMETER): Typo in the new_value NULL test fixed.
